// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-lg navbar-dark bg-dark"
    >
      <div
        class="container-fluid"
      >
        <a
          aria-current="page"
          class="navbar-brand navbar-brand active"
          href="/"
        >
          CCGC
        </a>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
          id="basic-navbar-nav"
        >
          <div
            class="ms-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="1"
                href="/standings"
              >
                Standings
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="2"
                href="/tournaments"
              >
                Tournaments
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="3"
                href="/greenies"
              >
                Greenies
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="4"
                href="/members"
              >
                Members
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="5"
                href="/courses"
              >
                Courses
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="6"
                href="/profile"
              >
                Profile
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="7"
                href="/logout"
              >
                Logout Happy
              </a>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-lg navbar-dark bg-dark"
    >
      <div
        class="container-fluid"
      >
        <a
          aria-current="page"
          class="navbar-brand navbar-brand active"
          href="/"
        >
          CCGC
        </a>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
          id="basic-navbar-nav"
        >
          <div
            class="ms-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="1"
                href="/standings"
              >
                Standings
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="2"
                href="/tournaments"
              >
                Tournaments
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="3"
                href="/greenies"
              >
                Greenies
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="4"
                href="/members"
              >
                Members
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="5"
                href="/courses"
              >
                Courses
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="8"
                href="/login"
              >
                Login
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rr-ui-event-key="9"
                href="/register"
              >
                Register
              </a>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
